<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:text="This is the settings fragment"-->
    <!--        android:gravity="center"-->
    <!--        android:textSize="30sp" />-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:fontFamily="sans-serif-black"
        android:text="@string/languageSettingsText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/language_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100" />

</LinearLayout>